--- a/web/projects/portal/src/app/vsobjects/objects/table/vs-crosstab.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/table/vs-crosstab.component.scss
@@ -65,7 +65,6 @@ $stacking-order: (
 
 table {
   table-layout: fixed;
-  border-collapse: collapse;
 }
 
 #cell-dropdown-menu {
